﻿CHANGELOG
---------

Patchnote-1.1 - 06/04/2018
  - Ajout des écrans de sélection
  - Ajout de la fonctionalité de test des connexions
  - Correction du chemin du Patchnote
  @ Responsive Design
  @ Ajout Rapport Vinciane
  @ Ajout comparaison par centre
  @ Ajout comparaison par commune

Patchnote-1.0 = Janvier 2018
  - Lancement 1.0
  - Ajout de données au contingent
  - Correction de bugs
  - Correction de glitchs graphiques
  - Traduction de tous les items

Patchnote-0.3.2 = 08/01/2018
  - Rapport d'activité ajusté fonctionnel
  - Intégration de la police INTERSTATE
  - Secteurs de Philippevilles-Florennes fusionnés.

Patchnote-0.3.1 = 12/12/2017
  - Rapport d'activité integré

Patchnote-0.3.0 = 06/12/2017
  - Refactorisation complète du système de fichiers
  - Correction des warnings IDEA
  - Création de l'objet 'PDF' pour les rapports
  - Création de l'objet 'Menu' pour optimiser et faciliter la maintenance
  - Mise à jour de l'UI

Patchnote-0.2.4 = 09/10/2017
  - Ajout d'un ratio au niveau de POI Excel pour éviter le blocage des zip-bombs provoqué par les tableaux mensuels
        trop lourds et qui empêchaient la DB de se mettre à jour

changelog-0.2.3 = 25/09/2017
  - Tabs "Travailleurs" et "Secteurs" fonctionnels dans l'ASDB
  - Ajout d'une barre de chargement lors de la mise à jour de la DB Contingent
  - Séparation des Threads graphiques et updates
  - Ajout d'une fenêtre shell pour résumer les secteurs mis à jour
  - Ajout du squelette XML pour le Tab "Issue" de l'ASDB

changelog-0.2.2 = 11/09/2017
  - Ajouts et corrections au Contingent
  - Correction de bugs côté SI
  - Ajout de la fonction UPDATE dans le contingent

changelog-0.2.1 = 08/08/2017
  - Ajout de la page Paramètres SI
  - Correction d'un bug lié au Drawer SI
  - Ajout d'un controlleur pour le Drawer SI afin d'alléger l'impact sur les ressources système
  - Plusieurs modifications design via resources.ui.CSS
  - Correction de bugs mineurs

changelog-0.2.0.1 = 04/07/2017