@@ -5,11 +5,10 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 
 public class Data {
-
     // Page titles
     public static final String homePageTitle = "Aide & Soins à Domicile - Statistiques - v"+ Version.versionNumber;
-    public static final String pageTitle0 = "Soins Infirmiers - Indicateurs annuels - v"+Version.versionNumber;
-    public static final String pageTitle1 = "Soins Infirmiers - Evolution d'un indicateur - v"+Version.versionNumber;
+    public static final String pageTitle1 = "Soins Infirmiers - Indicateurs annuels - v"+Version.versionNumber;
+    public static final String pageTitle0 = "Soins Infirmiers - Evolution d'un indicateur - v"+Version.versionNumber;
     public static final String pageTitle2 = "Soins Infirmiers - Sélection - v"+Version.versionNumber;
 
     // Centres
