@@ -9,7 +9,6 @@ class Year {
     private String fileB;
     private String fileC;
     private  String fileD;
-    private String path;
 
     void toPath(int year) {
         switch (year) {
@@ -18,42 +17,36 @@ class Year {
                 fileB = "Données Namur 2017.xls";
                 fileC = "Suivi pers. CJB Namur 2017.xls";
                 fileD = "Indicateurs 2017.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
             case 2016:
                 fileA = "Namur 2016 new.xls";
                 fileB = "Données Namur 2016 new.xls";
                 fileC = "Suivi pers. CJB Namur 2016 new.xls";
                 fileD = "Indicateurs 2016.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
             case 2015:
                 fileA = "Namur 2015 new.xls";
                 fileB = "Données Namur 2015 new.xls";
                 fileC = "Suivi pers. CJB Namur 2015 new.xls";
                 fileD = "Indicateurs 2015.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
             case 2018:
-                fileA = "Namur 2018 new.xls";
-                fileB = "Données Namur 2018 new.xls";
-                fileC = "Suivi pers. CJB Namur 2018 new.xls";
+                fileA = "Namur 2018.xls";
+                fileB = "Données Namur 2018.xls";
+                fileC = "Suivi pers. CJB Namur 2018.xls";
                 fileD = "Indicateurs 2018.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
             case 2019:
-                fileA = "Namur 2019 new.xls";
-                fileB = "Données Namur 2019 new.xls";
-                fileC = "Suivi pers. CJB Namur 2019 new.xls";
+                fileA = "Namur 2019.xls";
+                fileB = "Données Namur 2019.xls";
+                fileC = "Suivi pers. CJB Namur 2019.xls";
                 fileD = "Indicateurs 2019.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
             case 2020:
-                fileA = "Namur 2020 new.xls";
-                fileB = "Données Namur 2020 new.xls";
-                fileC = "Suivi pers. CJB Namur 2020 new.xls";
+                fileA = "Namur 2020.xls";
+                fileB = "Données Namur 2020.xls";
+                fileC = "Suivi pers. CJB Namur 2020.xls";
                 fileD = "Indicateurs 2020.xls";
-                path = "P:/PROVINCE et statistiques FASD/";
                 break;
         }
     }
@@ -83,7 +76,7 @@ class Year {
     }
 
     String getPath() {
-        return path;
+        return "P:/PROVINCE et statistiques FASD/";
     }
 
 
