@@ -36,7 +36,7 @@
         <RowConstraints maxHeight="415.0" minHeight="10.0" prefHeight="38.0" vgrow="NEVER" />
         <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="401.0" />
     </rowConstraints>
-    <Label alignment="TOP_CENTER" text="TABLEAUX ANNUELS" textAlignment="CENTER" textFill="#006782" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+    <Label alignment="TOP_CENTER" text="COMPARAISON ANNÉES" textAlignment="CENTER" textFill="#006782" GridPane.columnIndex="2" GridPane.columnSpan="4" GridPane.halignment="LEFT" GridPane.rowIndex="1">
         <font>
           <Font name="System Bold" size="36.0" />
         </font>
@@ -75,7 +75,7 @@
         </cursor>
         <Image url="@../../img/RedCross.png" />
     </ImageView>
-    <Label fx:id="noGraphicLabel" alignment="CENTER" prefHeight="32.0" prefWidth="245.0" text="Pas de graphique disponible pour cet indicateur" visible="false" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+    <Label fx:id="noGraphicLabel" alignment="CENTER" prefHeight="32.0" prefWidth="245.0" text="Pas de graphique disponible pour cet indicateur" visible="false" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
     <JFXSpinner fx:id="idleSpinner" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
     <VBox fx:id="menuPane" prefHeight="200.0" prefWidth="100.0" GridPane.columnSpan="5" />
     <LineChart fx:id="lineChart" animated="false" layoutX="1.0" layoutY="1.0" prefHeight="341.0" prefWidth="1124.0" stylesheets="/ui/CSS/LineChart.css" visible="false" GridPane.columnSpan="7" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
